--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <html>
     <head>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Signika+Negative:400,700' rel='stylesheet' type='text/css'>
+        <style>
+            p {
+                font-size:38px;
+                color:#C0C0C0;
+            }
+            a {
+                font-family:Signika Negative;
+            }
+            .bodyImage {
+                background-image:url('cogs.jpg');
+                width:100%;
+                height:100%;
+                -webkit-filter:blur(4px);
+            }
+            .bgImage{
+                background-image:url('http://www.mcdonalds.com/content/dam/McDonalds/item/mcdonalds-Big-N-Tasty.png');
+                -webkit-filter: blur(5px);
+            }
+            .content{z-index:10;position:relative;color:#fff}
 
+        </style>
     </head>
     <body>
-        
+        <div class="bodyImage">
+        </div>
+        <div class="container">
+            <div class="page-header">
+                <h1>
+                    JwG 
+                    <small> GitHub </small>
+                    <small> LinkedIn </small>
+                    <small> Twitter </small>
+                </h1>
+            </div>
+            <div class="container">
+                <p>
+                I'm an IS Major at <a href="http://www.ccs.neu.edu/">Northeastern University</a> on <a href="http://www.ccs.neu.edu/co-op/">Co-op</a> at <a href="http://www.dataxu.com/">DataXu</a>.
+                I love automation, optimization, great food and electronic music.
+                <p>
+                At DataXu I've had the oportunity to automate most our code deployemnt, and am currently building out centralized logging to enhance our platform monitoring.
+                <p>
+                At Northeastern I'm a Project Coordinator, Teacher and Developer with the <a href="http://crew.ccs.neu.edu">Undergraduate Experimental Systems Group</a>. I also am a board chair for the <a href="http://www.northeastern.edu/osccr/">Office of Student Conduct and Conflict Resoulution </a>.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
