--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: #eee;">
   <div class="row container" style="margin:0 auto;">
     <h1 class='text-center' style="margin-top: 100px; font-family: Orbitron, sans-serif;">Jwg.io</h1>
   <div class='text-center'>
@@ -27,6 +27,10 @@
     <i class="fa fa-github"></i><a href="https://github.com/jonathanwgoodwin">GitHub</a>
     <i style="margin-left: 10px" class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/jonathanwgoodwin">LinkedIn</a>
     <i style="margin-left: 10px" class="fa fa-twitter"></i><a href="https://twitter.com/JWGoodwin_">Twitter</a>
+  </div>
+  <div class='text-center'>
+  <img style="margin: 0 auto;width: 300px;" src="Image_Avatar.png" alt="me!">
+  <p style="color: #AAA">TheDuctTapeArtist</p>
   </div>
   </div>
 </body>
