--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="social text-center">
     <i class="fa fa-github"></i><a href="https://github.com/jonathanwgoodwin">GitHub</a>
     <i style="margin-left: 10px" class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/jonathanwgoodwin">LinkedIn</a>
-    <i style="margin-left: 10px" class="fa fa-twitter"></i><a href="https://twitter.com/JWGoodwin_">Twitter</a>
+    <i style="margin-left: 10px" class="fa fa-twitter"></i><a href="https://twitter.com/Jw0x47">Twitter</a>
   </div>
   <div class='text-center'>
   <img style="margin: 0 auto;width: 300px;" src="Image_Avatar.png" alt="me!">
