--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <h1 class='text-center' style="margin-top: 100px; font-family: Orbitron, sans-serif;">Jwg.io</h1>
   <div class='text-center'>
 
-    <p>I'm Jonathan. I like building things, elecronic music, good food, and nerding out on random subjects.<p>
-    <p>I especially love automation and metrics related work, but also enjoy playing with led light strips and bluetooth.</p>
-    <p>I'm currently on a <a href="http://northeastern.edu">Northeastern</a> Co-Op, at <a href="http://hubspot.com">HubSpot</a>. You can get in touch with me and check out my work using the links below.</p>
+    <p>I'm Jonathan. I like building things, elecronic music, delicious food, and nerding out on random topics.<p>
+    <p>I love automation, metrics and build process, in my spare time I hack on with led light strip relate projects.</p>
+    <p>I'm currently a student at <a href="http://northeastern.edu">Northeastern</a>, and working at <a href="http://hubspot.com">HubSpot</a> building CI.</p>
+    <p>You can get in touch with me and check out my work using the links below.</p>
   </div>
   <div class="social text-center">
     <i class="fa fa-github"></i><a href="https://github.com/jonathanwgoodwin">GitHub</a>
