--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <div class='text-center'>
   <img style="margin: 0 auto;width: 300px;" src="Image_Avatar.png" alt="me!">
-  <p style="color: #AAA">TheDuctTapeArtist</p>
+  <p style="color: #AAA">TheDuctTapeArtist: I Build CI</p>
   </div>
   </div>
 </body>
