--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class='text-center'>
 
     <p>I'm Jonathan. I like building things, elecronic music, delicious food, and nerding out on random topics.<p>
-    <p>I love automation, metrics and build process, in my spare time I hack on with led light strip relate projects.</p>
+    <p>I love automation, metrics and build processes, in my spare time I hack on with led light strip related projects.</p>
     <p>I'm currently a student at <a href="http://northeastern.edu">Northeastern</a>, and working at <a href="http://hubspot.com">HubSpot</a> building CI.</p>
     <p>You can get in touch with me and check out my work using the links below.</p>
   </div>
